# fintech-stock-predictor

./: .gitignore  Home.py  README.md  app.py  explore.py  market.py  requirements.txt
.streamlit/: config.toml
market-pipeline/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  workspace.yaml
market-pipeline/api/: main.py
market-pipeline/config/: pipeline.yml
market-pipeline/orchestration/dagster_project/: assets.py  definitions.py  jobs.py  schedules.py
market-pipeline/sql/: 001_create_schema.sql  002_create_tables.sql  003_create_indexes.sql
market-pipeline/src/market_pipeline/: __init__.py  config.py  logging_config.py
market-pipeline/src/market_pipeline/db/: connection.py  load.py  queries.py
market-pipeline/src/market_pipeline/extract/: yfinance_client.py
market-pipeline/src/market_pipeline/metrics/: daily_metrics.py
market-pipeline/src/market_pipeline/observability/: run_logger.py
market-pipeline/src/market_pipeline/storage/: minio_client.py
market-pipeline/src/market_pipeline/transform/: ohlcv_cleaning.py
market-pipeline/src/market_pipeline/validation/: schemas.py
market-pipeline/tests/: test_api.py  test_config.py  test_extraction.py  test_metrics.py  test_validation.py
pages/: 1_Market_Explorer.py  2_Prediction_Dashboard.py
